sa/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: NodePort
  ports:
  - port: 5432
    nodePort: 30007
  selector:
    app: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: sa-homework-api
spec:
  ports:
    - port: 8000
  selector:
    name: sa-homework-api
  type: NodePort
