sa/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sa-homework-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.sa.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sa-homework-api
            port:
              number: 8000
